Tue Oct 28 15:09:06 2003  Jonathan Blandford  <jrb@redhat.com>

	* README: Add a readme, and clarify the licensing terms of the
	software.

Tue Oct 28 14:47:37 2003  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmime.c (xdg_mime_shutdown): implement shutdown.  This
	frees all memory and resets to an uninitialized state as best as
	possible.

Mon Oct 27 11:45:58 2003  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmimemagic.c (_xdg_mime_magic_read_a_number): strtol
	returns a long, not an int.  Thanks to Manish Singh for pointing
	this out.

	* src/xdgmimemagic.c (_xdg_mime_magic_parse_magic_line): change
	assertion to avoid a warning.

Tue Oct 21 15:56:55 2003  Jonathan Blandford  <jrb@gnome.org>

	* Makefile: add a simple makefile
	* src/Makefile: ditto

Tue Jul 22 15:37:45 2003  Jonathan Blandford  <jrb@gnome.org>

	* xdgmime/xdgmime.c (xdg_mime_init): use XDG_DATA_HOME instead of
	XDG_CONFIG_HOME.
