@@ -1,3 +1,11 @@
+Tue Jan 13 16:21:04 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* src/xdgmime.[ch] (XDG_MIME_TYPE_UNKNOWN): make an extern const
+	char * so that comparisons can work.
+
+	* src/xdgmimeint.c (_xdg_utf8_to_ucs4): patch from Dave Jones
+	<davej@redhat.com> to make operations more explicit.
+
 Tue Oct 28 15:09:06 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* README: Add a readme, and clarify the licensing terms of the
